# Quota-beacon

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  UPSTREAM-NOTICE.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: verify-macos-bundle.sh
.github/workflows/: ci.yml  release.yml
docs/: GITHUB-RELEASE-CHECKLIST.md  KNOWN-LIMITATIONS.md  PROJECT-SUMMARY.md  RELEASE.md  RELEASE_TEMPLATE.md  TEST-MATRIX.md
src/: App.tsx  main.tsx  styles.css  styles.test.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: codex.rs  codex_overlay.rs  lib.rs  main.rs  models.rs  token_usage.rs
src/components/: AnimatedNumber.tsx  ConversationTokenOverlay.tsx  DesignPlayground.tsx  PaletteEditor.tsx  PalettePreview.tsx  ProviderMark.tsx  QuotaCard.test.tsx  QuotaCard.tsx
src/lib/: bridge.ts  format.test.ts  format.ts  i18n.ts  quotaTheme.test.ts  quotaTheme.ts
